# rpi-enviro-mqtt

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .rsyncignore  README.md  configuration.yaml.example  data.py  lint-requirements.txt  mqtt-all.py  pyproject.toml  requirements.txt
src/enviro_mqtt/: __main__.py  data.py  mqtt.py
