[tool.poetry]
name = "rpi-enviro-mqtt"
version = "0.1.0"
description = "Send air quality data from a Pimoroni RPi Enviro+ over MQTT"
authors = [
    "Robin Cole <robmarkcole@gmail.com>",
    "Lexi Robinson <lexi@lexi.org.uk>",
]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
enviroplus = "^0.0.6"
gmqtt = "^0.6.13"
pyyaml = "^6.0.1"
getmac = "^0.9.4"
typing-extensions = "^4.9.0"
pms5003 = "<1"
st7735 = "0.0.5"
numpy = "^1.26.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.1.11"
types-pyyaml = "^6.0.12.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
extend-select = ["I"]

[tool.ruff.isort]
combine-as-imports = true


[tool.mypy]
strict = true
ignore_missing_imports = true
